# game-programmer-book-build

./: 2010以降固有の問題について.txt  Readme.md  clean.sh  slnファイルを開けない時に.txt  この中にあるものについて.txt  使用許諾規約.txt  問題が起こったら.txt
src/: CMakeLists.txt  SectionAll.sln  clean.sh
src/01_FirstGame/: CMakeLists.txt  FirstGame.sln
src/01_FirstGame/NimotsuKun/: CMakeLists.txt  NimotsuKun.vcxproj  main.cpp
src/01_FirstGame/NimotsuKun2/: CMakeLists.txt  NimotsuKun2.vcxproj  main.cpp  stageData.txt
src/01_FirstGame/NimotsuKunBitOperation/: CMakeLists.txt  NimotsuKunBitOperation.vcxproj  main.cpp
src/01_FirstGame/NimotsuKunRawMemory/: CMakeLists.txt  NimotsuKunRawMemory.vcxproj  main.cpp
src/02_2DGraphics1/: 2DGraphics1.sln  CMakeLists.txt
src/02_2DGraphics1/NimotsuKunBox/: CMakeLists.txt  NimotsuKunBox.vcxproj  main.cpp
src/02_2DGraphics1/NimotsuKunBoxWithTermination/: CMakeLists.txt  NimotsuKunBoxWithTermination.vcxproj  main.cpp
src/02_2DGraphics1/NimotsuKunTextOnly/: CMakeLists.txt  NimotsuKunTextOnly.vcxproj  main.cpp
src/02_2DGraphics1/NimotuKunDot/: CMakeLists.txt  NimotuKunDot.vcxproj  main.cpp
src/02_2DGraphics1/drawPixels/: CMakeLists.txt  drawPixels.vcxproj  main.cpp
src/03_2DGraphics2/: 2DGraphics2.sln  CMakeLists.txt
src/03_2DGraphics2/NimostuKunImage/: Array2D.h  File.h  Image.cpp  Image.h  State.cpp  main.cpp
src/03_2DGraphics2/NimotsuKunAlphaBlend/: CMakeLists.txt  Image.cpp  Image.h  NimotsuKunAlphaBlend.vcxproj  State.cpp  main.cpp  nimotsuKunImage2.dds
src/03_2DGraphics2/NimotsuKunAlphaTest/: CMakeLists.txt  NimotsuKunAlphaTest.vcxproj  State.cpp  State.h
src/03_2DGraphics2/NimotsuKunImage/: CMakeLists.txt  Image.cpp  NimotsuKunImage.vcxproj  State.cpp  State.h  nimotsuKunImage.dds
src/03_2DGraphics2/displayImage/: CMakeLists.txt  bar.dds  displayImage.vcxproj  main.cpp
src/03_2DGraphics2/displayImageAdditionalBlend/: CMakeLists.txt  Image.cpp  displayImageAdditionalBlend.vcxproj  main.cpp
src/03_2DGraphics2/displayImageAlphaBlend/: CMakeLists.txt  File.cpp  Image.cpp  displayImageAlphaBlend.vcxproj  forground.dds
src/03_2DGraphics2/displayImageAlphaTest/: CMakeLists.txt  File.h  Image.cpp  displayImageAlphaTest.vcxproj  main.cpp
src/03_2DGraphics2/displayImagePartially/: CMakeLists.txt  displayImagePartially.vcxproj  main.cpp
src/04_RealTime/: CMakeLists.txt  RealTime.sln
src/04_RealTime/NimotsuKunConstantFrameRate/: CMakeLists.txt  File.cpp  NimotsuKunConstantFrameRate.vcxproj  State.cpp  State.h  main.cpp
src/04_RealTime/NimotsuKunRealTime/: CMakeLists.txt  NimotsuKunRealTime.vcxproj  State.cpp  State.h  main.cpp
src/04_RealTime/NimotsuKunRealTime2/: CMakeLists.txt  NimotsuKunRealTime2.vcxproj  main.cpp
src/04_RealTime/NimotsuKunSmoothMove/: CMakeLists.txt  NimotsuKunSmoothMove.vcxproj  State.cpp  main.cpp
src/04_RealTime/NimotsuKunVariableFrameRate/: CMakeLists.txt  File.h  Image.cpp  NimotsuKunVariableFrameRate.vcxproj  State.cpp  State.h  main.cpp
src/04_RealTime/Tearing/: CMakeLists.txt  Tearing.vcxproj  main.cpp
src/05_Sequence1/: CMakeLists.txt  Sequence1.sln
src/05_Sequence1/NimotsuKunWithSequence1/: CMakeLists.txt  Image.cpp  NimotsuKunWithSequence1.vcxproj  State.cpp  State.h  main.cpp  title.dds
src/05_Sequence1/NimotsuKunWithSequence2/: CMakeLists.txt  Image.cpp  NimotsuKunWithSequence2.vcxproj  State.cpp  main.cpp
src/06_Font1/: CMakeLists.txt  Font1.sln
src/06_Font1/NimotsuKunWithFont/: Array2D.h  CMakeLists.txt  Image.cpp  Image.h  NimotsuKunWithFont.vcxproj  State.h  StringRenderer.cpp  StringRenderer.h
src/07_2DActionGame/: 2DActionGame.sln  CMakeLists.txt
src/07_2DActionGame/BakudanBitoBackgroundOnly/: BakudanBitoBackgroundOnly.vcxproj  CMakeLists.txt  MainLoop.cpp  MainLoop.h
src/07_2DActionGame/BakudanBitoSequenceOnly/: BakudanBitoSequenceOnly.vcxproj  CMakeLists.txt  Image.cpp  State.cpp  main.cpp
src/07_2DActionGame/BakudanBitoWithDynamicObject/: BakudanBitoWithDynamicObject.vcxproj  CMakeLists.txt
src/07_2DActionGame/NimotsuKunWithSystemFont/: CMakeLists.txt  NimotsuKunWithSystemFont.vcxproj  main.cpp
src/08_2DCollision/: 2DCollision.sln  CMakeLists.txt
src/08_2DCollision/BakudanBitoWithCollision/: BakudanBitoWithCollision.vcxproj  CMakeLists.txt  Image.h  main.cpp
src/08_2DCollision/Detection/: CMakeLists.txt  Detection.vcxproj  main.cpp
src/08_2DCollision/Reaction1/: CMakeLists.txt  Reaction1.vcxproj  main.cpp
src/08_2DCollision/Reaction2/: CMakeLists.txt  Reaction2.vcxproj  main.cpp
src/08_2DCollision/Reaction3/: CMakeLists.txt  Reaction3.vcxproj  main.cpp
src/08_2DCollision/Reaction4/: CMakeLists.txt  Reaction4.vcxproj  main.cpp
src/08_2DCollision/Reaction5/: CMakeLists.txt  Reaction5.vcxproj  main.cpp
src/08_2DCollision/ReducingStress1/: CMakeLists.txt  ReducingStress1.vcxproj  main.cpp
src/09_InputDevices/: CMakeLists.txt  InputDevices.sln
src/10_Sequence2/: CMakeLists.txt  Sequence2.sln
src/11_Sound1/: CMakeLists.txt  Sound1.sln
src/11_Sound2/: CMakeLists.txt  Sound2.sln
src/12_2DTransform/: 2DTransform.sln  CMakeLists.txt
src/13_3DHardware1/: 3DHardware1.sln  CMakeLists.txt
src/14_3DGraphics1/: 3DGraphics1.sln  CMakeLists.txt
src/15_GraphicsLibrary1/: CMakeLists.txt  GraphicsLibrary1.sln
src/16_PseudoXml/: CMakeLists.txt  PseudoXml.sln
src/17_FastCode/: CMakeLists.txt  FastCode.sln
src/18_3DCollision1/: 3DCollision1.sln  CMakeLists.txt
src/19_RoboFightDesign/: CMakeLists.txt  RoboFightDesign.sln
src/20_Lighting/: CMakeLists.txt  Lighting.sln
src/21_Animation/: Animation.sln  CMakeLists.txt
src/22_3DCollision2/: 3DCollision2.sln  CMakeLists.txt
src/23_Loading/: CMakeLists.txt  Loading.sln
src/25_UsingFinalLibrary/: CMakeLists.txt  UsingFinalLibrary.sln
src/26_LifeWithBugs/: CMakeLists.txt  LifeWithBugs.sln
src/GameLibs/: BuildGameLibs.sln  CMakeLists.txt  build.pl  buildTmp.bat
src/ModuleTest/: CMakeLists.txt  ModuleTest.sln
src/NonFree/: CMakeLists.txt  NonFree.sln  README.txt  Thumbs.db  UpgradeLog.XML
src/Tools/: ToolsCpp.sln  ToolsCs.sln
src/cmake/: SampleBase.cmake  SampleBase2.cmake  copyresource.cmake
(+2097 files in other folders)
