cmake_minimum_required (VERSION 3.8)
project ( SectionAll )

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

if( $ENV{GAME_LIB_DIR} STREQUAL "" )
  message( FATAL_ERROR "GAME_LIB_DIR is not defined. You must set GAME_LIB_DIR !" )
endif()

add_subdirectory( 01_FirstGame )
add_subdirectory( 02_2DGraphics1 )
add_subdirectory( 03_2DGraphics2 )
add_subdirectory( 04_RealTime )
add_subdirectory( 05_Sequence1 )
add_subdirectory( 06_Font1 )
add_subdirectory( 07_2DActionGame )
add_subdirectory( 08_2DCollision )
add_subdirectory( 09_InputDevices )
add_subdirectory( 10_Sequence2 )
add_subdirectory( 11_Sound1 )
add_subdirectory( 11_Sound2 )
add_subdirectory( 12_2DTransform )
add_subdirectory( 13_3DHardware1 )
add_subdirectory( 14_3DGraphics1 )
add_subdirectory( 15_GraphicsLibrary1 )
add_subdirectory( 16_PseudoXml )
add_subdirectory( 17_FastCode )
add_subdirectory( 18_3DCollision1 )
add_subdirectory( 19_RoboFightDesign )
add_subdirectory( 20_Lighting )
add_subdirectory( 21_Animation )
add_subdirectory( 22_3DCollision2 )
add_subdirectory( 23_Loading )
add_subdirectory( 25_UsingFinalLibrary )
add_subdirectory( 26_LifeWithBugs )


