cmake_minimum_required (VERSION 3.8)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

add_subdirectory( PerspectiveProblems )
add_subdirectory( PrespectiveProblems2 )
add_subdirectory( RoboFightGraphicsOnly )
add_subdirectory( ViewTransform )
add_subdirectory( WholeTransform )
add_subdirectory( WorldTransform )
add_subdirectory( ZTest )
add_subdirectory( 3DRotation )
add_subdirectory( AlphaBlendAndZTest )
add_subdirectory( draw3DTriangle )
add_subdirectory( drawPerspectiveRect )
add_subdirectory( drawPerspectiveRect2 )
