cmake_minimum_required (VERSION 3.8)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

add_subdirectory( CirclesSorting1 )
add_subdirectory( CirclesSorting2 )
add_subdirectory( CirclesUniformDivisionUsingArray )
add_subdirectory( CirclesUniformDivisionUsingArrayList )
add_subdirectory( CirclesUniformDivisionUsingArrayList2 )
add_subdirectory( CirclesUniformDivisionUsingArrayList3 )
add_subdirectory( CirclesUniformDivisionUsingStdList )
add_subdirectory( CirclesAllCombination )
add_subdirectory( CirclesKDTree )
