cmake_minimum_required (VERSION 3.8)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

add_subdirectory( HuffmanCoder )
add_subdirectory( LoaderUsingThread )
add_subdirectory( LoaderWithArchiveAccess )
add_subdirectory( LoadingUsingThread )
add_subdirectory( OneFilePerFrame )
add_subdirectory( RaceCondition )
add_subdirectory( RaceCondition2 )
add_subdirectory( RangeCoder )
add_subdirectory( RunLengthCompression )
add_subdirectory( SimpleLoader )
add_subdirectory( SimpleThread )
add_subdirectory( WrongIncermentation )
add_subdirectory( WrongIncrementation2 )
add_subdirectory( Archiver1 )
add_subdirectory( ConstantRate )
add_subdirectory( CorrectIncrementation )
add_subdirectory( DictionaryCompression )
