cmake_minimum_required (VERSION 3.8)
project ( BuildGameLibs )

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

if( $ENV{GAME_LIB_DIR} STREQUAL "" )
  message( FATAL_ERROR "GAME_LIB_DIR is not defined. You must set GAME_LIB_DIR !" )
endif()

add_subdirectory( Modules )
add_subdirectory( 2DActionGame )
add_subdirectory( 2DGraphics1 )
add_subdirectory( 2DTransform )
add_subdirectory( 3DCollision1 )
add_subdirectory( 3DGraphics1 )
add_subdirectory( 3DHardware1 )
add_subdirectory( Final )
add_subdirectory( InputDevices )
add_subdirectory( Loading )
add_subdirectory( Realtime )
add_subdirectory( Sequence1 )
add_subdirectory( Sound1 )
add_subdirectory( Sound2 )
