cmake_minimum_required (VERSION 3.8)
project ( ModuleTest )

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_SUPPRESS_REGENERATION true)

if( $ENV{GAME_LIB_DIR} STREQUAL "" )
  message( FATAL_ERROR "GAME_LIB_DIR is not defined. You must set GAME_LIB_DIR !" )
endif()

add_subdirectory( PrimitiveRenderer )
add_subdirectory( PseudoXml )
add_subdirectory( Random )
add_subdirectory( StreamingSound )
add_subdirectory( Thread )
add_subdirectory( WindowsFont )
add_subdirectory( Allocation )
add_subdirectory( CollisionDynamic )
add_subdirectory( CollisionStatic )
add_subdirectory( FileAccess )
add_subdirectory( ModelViewer )
add_subdirectory( OStringStream )
add_subdirectory( PrimeNumber )
